GH-1913: Switch Google Guava to other code. For caching, using Caffeine.