@@ -19,7 +19,6 @@
 package org.apache.jena.sparql.core.mem;
 
 import static java.util.stream.Collectors.toSet;
-import static org.apache.jena.ext.com.google.common.collect.ImmutableSet.of;
 import static org.apache.jena.query.ReadWrite.READ;
 import static org.apache.jena.query.ReadWrite.WRITE;
 import static org.junit.Assert.assertEquals ;
@@ -28,7 +27,6 @@ import static org.junit.Assert.assertTrue ;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import org.apache.jena.ext.com.google.common.collect.ImmutableSet;
 import org.junit.Test;
 
 public abstract class AbstractTestTupleTable<TupleType, TupleTableType extends TupleTable<TupleType>> {
@@ -41,7 +39,7 @@ public abstract class AbstractTestTupleTable<TupleType, TupleTableType extends T
 
 	protected abstract Stream<Set<TupleSlot>> queryPatterns();
 
-	protected static final Set<TupleSlot> allWildcardQuery = of();
+	protected static final Set<TupleSlot> allWildcardQuery = Set.of();
 
 	protected long transactionalCount() {
 	    table().begin(READ);
@@ -53,37 +51,37 @@ public abstract class AbstractTestTupleTable<TupleType, TupleTableType extends T
 	protected long rawCount() {
 	    return tuples().count() ;
 	}
-	
+
 	@Test
 	public void addAndRemoveSomeTuples() {
         assertEquals(0, transactionalCount()) ;
-        
+
 		// simple add-and-delete
 	    table().begin(WRITE);
 		table().add(testTuple());
-		
+
 		assertEquals(1, rawCount()) ;
-		
+
 		Set<TupleType> contents = tuples().collect(toSet());
-		assertEquals(ImmutableSet.of(testTuple()), contents);
+		assertEquals(Set.of(testTuple()), contents);
 		table().delete(testTuple());
-		
+
         assertEquals(0, rawCount()) ;
         contents = tuples().collect(toSet());
 		assertTrue(contents.isEmpty());
 		table().end();
-		
+
         assertEquals(0, transactionalCount()) ;
-		
+
 		// add, abort, then check to see that nothing was persisted
 		table().begin(WRITE);
 		table().add(testTuple());
-		
+
 		assertEquals(1, rawCount()) ;
 		contents = tuples().collect(toSet());
-		assertEquals(ImmutableSet.of(testTuple()), contents);
+		assertEquals(Set.of(testTuple()), contents);
 		table().abort();
-		
+
         assertEquals(0, transactionalCount()) ;
 
 		// add, commit, and check to see that persistence occurred
@@ -91,11 +89,11 @@ public abstract class AbstractTestTupleTable<TupleType, TupleTableType extends T
 		table().add(testTuple());
         assertEquals(1, rawCount()) ;
 		contents = tuples().collect(toSet());
-		assertEquals(ImmutableSet.of(testTuple()), contents);
+		assertEquals(Set.of(testTuple()), contents);
 		table().commit();
-		
+
 		assertEquals(1, transactionalCount()) ;
-		
+
 		// remove the test tuple and check to see that it is gone
 		table().begin(WRITE);
 		assertEquals(1, rawCount()) ;
